--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/react": "^8.0.4",
+    "jest-dom": "^3.5.0",
+    "node-sass": "^4.12.0"
   }
 }
